# dring

./: .gitignore  LICENSE  README.md  data_gallery.ipynb  figures.ipynb  input_data_overview.ipynb  pjob.s  pyproject.toml  requirements.txt  run_fit.py  submit_all_configs.sh
configs/: HD163296_ring1.yaml  HD163296_ring1_eg.yaml  HD163296_ring2.yaml  LKCA15_ring1.yaml  LKCA15_ring2.yaml  mock_sim1.yaml  mock_sim2.yaml  mock_sim3.yaml  mock_sim4.yaml
data/: HD163296_band3.npz  HD163296_band6.npz  HD163296_band7.npz  LkCa15_band3.npz  LkCa15_band6.npz  LkCa15_band7.npz  example_band3.npz  example_band6.npz  example_band7.npz  mock_sim1_band3.npz  mock_sim1_band6.npz  mock_sim1_band7.npz  mock_sim2_band3.npz  mock_sim2_band6.npz  mock_sim2_band7.npz  mock_sim3_band3.npz  mock_sim3_band6.npz  mock_sim3_band7.npz  mock_sim4_band3.npz  mock_sim4_band6.npz  mock_sim4_band7.npz
data/default_opacity_dsharp/: k_abs_opac.npy  k_sca_opac.npy  lam_opac.npy  rhos_opac.npy
docs/: config_help.md  index.html  model_explorer.html
dring/: __init__.py  __main__.py  api.py  cli.py  corner_tools.py  derived.py  plotting.py
dring/examples/: demo.yaml
dring/examples/default_opacity_dsharp/: g_sca_opac.npy  size_opac.npy
examples/: interactive_model.py  requirements.txt
interactive_model_app/: interactive_model.py  requirements.txt
ringfit/: __init__.py  constants.py  data.py  fitter.py  model.py
ringfit/kataoka2026_coeffs/: README.md  __init__.py  kataoka2026_stokesI_coeffs.npz
tests/: test_kataoka2026.py  test_scattering_formula_switch.py
